--- a/index.html
+++ b/index.html
@@ -11,20 +11,19 @@
 </head>
 
 <body>
-    <header class="flex">
-        <div class="app-title flex-1">
-            <h2>Movie Info Database</h2>
+    <header class="flex justify-around">
+        <div class="app-title">
+            <h1>Movie Info Database</h1>
         </div>
-        <div class="search flex-1">
+        <div class="search">
             <form id="search-form">
-                <!-- <label class="form-label" for="search">Enter movie name</label> -->
                 <input name="search" id="search" type="text" placeholder="Enter Movie Name" autofocus="true" />
                 <button type="submit" class="btn">Get Movie!</button>
             </form>
         </div>
     </header>
     <main>
-        <container class="movie">
+        <container class="movie flex flex-col items-center">
             <div class="poster">
                 <img src="https://via.placeholder.com/300x500" alt="Movie Poster" />
             </div>
@@ -33,10 +32,12 @@
             </div>
             <div class="plot-desc">
                 <h3>And the plot thickens...</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio a eaque quasi labore? Architecto earum molestias, beatae omnis hic minus aut natus cum rerum. Nemo qui repudiandae temporibus assumenda autem.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio a eaque quasi labore? Architecto earum molestias, beatae omnis hic minus aut natus cum rerum. </br>
+                     Nemo qui repudiandae temporibus assumenda autem. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo nesciunt doloribus iusto laboriosam illum architecto </br>
+                     dicta tenetur consequatur ab mollitia, rerum eveniet ipsam. Ea veritatis numquam est! Accusantium, autem enim.</p>
             </div>
         </container>
-        <container class="info grid grid-cols-2">
+        <container class="info grid grid-cols-2 justify-items-center items-center">
             <div class="director">
                 <h3>Directed by:</h3>
                 <ul class="dir-list">
@@ -66,7 +67,7 @@
 
             </div>
         </container>
-        <container class="gif grid grid-cols-3">
+        <container class="gif grid grid-cols-3 justify-items-center">
             <div class="gif-one">
                 <img src="https://via.placeholder.com/300" alt="One" />
                 <p>Name of first actor</p>
@@ -82,7 +83,7 @@
         </container>
 
     </main>
-
+    <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
