added some responsiveness and more styling

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 </head>
 
 <body>
-    <header class="flex justify-around">
+    <header class="title flex justify-around bg-black">
         <div class="app-title">
             <h1>Movie Info Database</h1>
         </div>
         <div class="search">
             <form id="search-form">
-                <input name="search" id="search" type="text" placeholder="Enter Movie Name" autofocus="true" />
-                <button type="submit" class="btn">Get Movie!</button>
+                <input class="rounded-md" name="search" id="search" type="text" placeholder="Enter Movie Name" autofocus="true" />
+                <button type="submit" class="btn bg-green-500/100 rounded-md">Get Movie!</button>
             </form>
         </div>
     </header>
