--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <script src="https://cdn.tailwindcss.com"></script>
+    
     <title>Movie Info Database</title>
 </head>
 
@@ -48,13 +48,12 @@
             <div class="actor">
                 <h3>Starring:</h3>
                 <ul class="actor-list">
-                    <li>someone else</li>
-                    <li>someone else's brother</li>
+
                 </ul>
 
             </div>
             <div class="rating">
-                <h3>MPAA Rating:</h3>
+                <h3>MPAA Rating: <span id="rating"> </span></h3>
 
             </div>
             <div class="score">
@@ -83,6 +82,8 @@
         </container>
 
     </main>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="./assets/js/script.js"></script>
 </body>
 
