added hidden attrib

--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
             </form>
         </div>
     </header>
-    <div class="error">
+
+    <div class="hidden error">
         <h1 class="font-bold text-3xl text-center">This is not a movie name! Please enter a proper movie name.</h1>
     </div>
 
-    <main class="hidden">
+    <main class="hidden main">
         <container class="movie flex flex-col items-center">
             <div class="poster">
                 <img src="https://via.placeholder.com/300x500" alt="Movie Poster" />
