--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             </form>
         </div>
     </header>
+
+    <!--    -->
+
     <main>
         <container class="movie flex flex-col items-center">
             <div class="poster">
@@ -45,6 +48,12 @@
                 </ul>
 
             </div>
+            
+            <div class="rating">
+                <h3>MPAA Rating: <span id="rating"> </span></h3>
+
+            </div>
+
             <div class="actor">
                 <h3>Starring:</h3>
                 <ul class="actor-list">
@@ -52,16 +61,13 @@
                 </ul>
 
             </div>
-            <div class="rating">
-                <h3>MPAA Rating: <span id="rating"> </span></h3>
-
-            </div>
+            
             <div class="score">
                 <h3>As good as it gets:</h3>
                 <ul class="score-list">
+                    <li>IMDB</li>
                     <li>Rotten Tomatoes</li>
                     <li>MetaCritic</li>
-                    <li>Google Users</li>
                 </ul>
 
             </div>
