--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h1 class="font-bold text-3xl text-center">This is not a movie name! Please enter a proper movie name.</h1>
     </div>
 
-    <main class="main"> <!--- add "hidden" to class-->
+    <main class="hidden main">
         <container class="movie flex flex-col items-center">
             <div class="poster my-5">
                 <img src="https://via.placeholder.com/300x500" alt="Movie Poster" />
