changed to iframe because GIPHY is too good for img

--- a/index.html
+++ b/index.html
@@ -69,21 +69,21 @@
                     <li>Rotten Tomatoes</li>
                     <li>MetaCritic</li>
                 </ul>
-
+                
             </div>
         </container>
         <container class="gif grid grid-cols-3 justify-items-center">
             <div class="gif-one">
-                <img src="https://via.placeholder.com/300" alt="One" />
-                <p>Name of first actor</p>
+                <iframe src="https://via.placeholder.com/300" alt="One" ></iframe>
+
             </div>
             <div class="gif-two">
-                <img src="https://via.placeholder.com/300" alt="Two" />
-                <p>Name of second actor</p>
+                <iframe src="https://via.placeholder.com/300" alt="Two" ></iframe>
+
             </div>
             <div class="gif-three">
-                <img src="https://via.placeholder.com/300" alt="Three" />
-                <p>Name of third actor</p>
+                <iframe src="https://via.placeholder.com/300" alt="Three" ></iframe>
+
             </div>
         </container>
 
