--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </div>
 
             <div class="score border-solid border-2 w-64 h-32">
-                <h3>As good as it gets:</h3>
+                <h3>Reviews:</h3>
                 <ul class="score-list">
                     <li>IMDB</li>
                     <li>Rotten Tomatoes</li>
@@ -80,7 +80,7 @@
 
             </div>
         </container>
-        <container class="gif grid gap-1.5 items-center md:grid-cols-3 justify-items-center">
+        <container class="gif grid gap-1.5 items-center md:grid-cols-3 justify-items-center p-5">
             <div class="gif-one">
                 <iframe src="https://via.placeholder.com/300" alt="One"></iframe>
 
