added locastorage, title bar icon, changed MPAA to MPA

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css" />
-
+    <link rel="icon" href="./assets/images/icon.jpg" type="image/jpg"/>
     <title>Movie Info Database</title>
 </head>
 
@@ -59,7 +59,7 @@
 
             </div>
             <div class="mpaaRating border-solid border-2 w-64 h-16">
-                <h3>MPAA Rating: <span id="rating"></span></h3>
+                <h3>MPA Rating: <span id="rating"></span></h3>
 
             </div>
             <div class="actor border-solid border-2 w-64 h-32">
