--- a/index.html
+++ b/index.html
@@ -6,24 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <link rel="icon" href="./assets/images/icon.jpg" type="image/jpg"/>
+    <link rel="icon" href="./assets/images/icon.jpg" type="image/jpg" />
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Movie Info Database</title>
 </head>
 
 <body>
-    <header class="title flex flex-col items-center sm:flex-row sm:justify-around bg-black">
+    <header class="title flex flex-col sm:flex-row sm:justify-around bg-blue">
         <div class="app-title">
-            <h1 class="text-2xl">Movie Info Database</h1>
+            <h1 class="text-4xl font-bold">Movie Info Database</h1>
         </div>
         <div class="search">
             <form id="search-form">
                 <div class="search-contaner">
-                    <div><input class="rounded-md my-3" name="search" id="search" type="text"
-                            placeholder="Enter Movie Name" autofocus="true" /></div>
-                    <div><button type="submit"
-                            class="btn bg-green-500/100 rounded-md font-bold hover:text-amber-400">Show me the
-                            movie!</button></div>
+                    <div>
+                        <input class="rounded-md my-3" name="search" id="search" type="text" placeholder="Enter Movie Name" autofocus="true" />
+                    </div>
+                    <div>
+                        <button type="submit" class="btn bg-blue-300/100 rounded-md font-bold hover:bg-blue-400">Get movie!</button>
+                    </div>
                 </div>
             </form>
         </div>
@@ -33,8 +34,8 @@
         <h1 class="font-bold text-3xl text-center">This is not a movie name! Please enter a proper movie name.</h1>
     </div>
 
-    <main class="hidden main">
-        <container class="movie flex flex-col items-center">
+    <main class="hidden main flex flex-col items-center">
+        <container class="movie flex flex-col items-center w-4/6 rounded-md shadow-lg shadow-black">
             <div class="poster my-5">
                 <img src="https://via.placeholder.com/300x500" alt="Movie Poster" />
             </div>
@@ -51,7 +52,7 @@
                     autem enim.</p>
             </div>
         </container>
-        <container class="info grid gap-1.5 sm:grid-cols-2 justify-items-center sm:items-center my-5">
+        <container class="info grid gap-1.5 sm:grid-cols-2 justify-items-center sm:items-center my-5 w-4/6">
             <div class="director border-solid border-2 w-64 h-16">
                 <h3>Directed by:</h3>
                 <ul class="dir-list">
@@ -81,7 +82,7 @@
 
             </div>
         </container>
-        <container class="gif grid gap-1.5 items-center md:grid-cols-3 justify-items-center p-5">
+        <container class="gif grid gap-1.5 items-center md:grid-cols-3 justify-items-center p-5 w-4/6">
             <div class="gif-one">
                 <iframe src="https://via.placeholder.com/300" alt="One"></iframe>
 
@@ -97,7 +98,7 @@
         </container>
 
     </main>
-    
+
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="./assets/js/script.js"></script>
 </body>
